Actions
Bug #11631
closedSPARC NULL pointer error in libds
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors building libds on SPARC:
../common/libds.c:105: error: passing argument 1 of 'ds_hdl_to_dslibentry' makes
integer from pointer without a cast
../common/libds.c:128: error: comparison between pointer and integer
../common/libds.c:145: error: comparison between pointer and integer
../common/libds.c:204: error: assignment makes integer from pointer without a ca
st
../common/libds.c:300: error: assignment makes integer from pointer without a ca
st
../common/libds.c:717: error: comparison between pointer and integer
Updated by Electric Monk almost 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 53bfe442a2e3c2938be0ac7b2b05d096689c2ea6
commit 53bfe442a2e3c2938be0ac7b2b05d096689c2ea6 Author: Peter Tribble <peter.tribble@gmail.com> Date: 2019-09-07T10:43:05.000Z 11631 SPARC NULL pointer error in libds Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Robert Mustacchi <rm@joyent.com>
Actions